Fixed #4: Link in <legend> overflows content of fieldset

--- a/less/inc/forms.less
+++ b/less/inc/forms.less
@@ -133,7 +133,8 @@ fieldset legend a {
 }
 
 // Makes content of fieldset clickable. This is necessary because of big <a> in fieldset's legend.
-fieldset > div > div, fieldset > div > p, fieldset > div > a, fieldset > div > code {
+fieldset > div > div, fieldset > div > p, fieldset > div > a, fieldset > div > code,
+fieldset > div > input, fieldset > div > select {
     position: relative;
 }
 
